# tokenizer

./: .gitignore  LICENSE  Makefile.am  configure.ac  install_packages.sh  tokenizer.spec
example/: Makefile.am  example.c
parser/: .gitignore  Makefile.am  parser.y  str.c  str.h  token.h  userdata.c  userdata.h
scanner/: .gitignore  Makefile.am  comment_c.re  comment_cxx.re  comment_perl.re  input.c  input.h  scanner.h  scanner.re
tests/: .gitignore  Makefile.am  array_obj.json  driver_wrapper.sh  hex.txt  input.json  input.txt  my-test-driver  obj_array.json  output.txt.exp  tap_wrapper.sh  test_alphabet.exp  test_alphabet.sh  test_array_obj.sh  test_comma.c  test_digits.sh  test_digits.sh.exp  test_hex.sh  test_hex.sh.exp  test_init.c  test_obj_array.sh  test_prove.sh  test_simple.sh  test_simple.txt  test_tap.t
tokenizer/: .gitignore  Makefile.am  tokenizer.c
tools/: .gitignore  Makefile.am
